unpackaged/main/default/objects/fferpcore__CompanyCreditTerms__c/fferpcore__CompanyCreditTerms__c.object-meta.xml
<CustomObject>
    <customHelpPage>fferpcore__CompanyCreditTermsHelp</customHelpPage>
    <description>Contains the credit terms for a company. These are used to determine billing document due dates when credit terms are not held at account level.</description>
    <label>Company Credit Terms</label>
    <nameField>
        <label>Company Credit Terms Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Company Credit Terms</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>