unpackaged/main/default/objects/fferpcore__CompanyCreditTerms__c/fields/fferpcore__Company__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__Company__c</fullName>
    <description>The company to which these credit terms belong.</description>
    <inlineHelpText>The company to which these credit terms belong.</inlineHelpText>
    <label>Company</label>
    <referenceTo>fferpcore__Company__c</referenceTo>
    <relationshipLabel>Company Credit Terms</relationshipLabel>
    <relationshipName>CompanyCreditTerms</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>