unpackaged/main/default/objects/fferpcore__CompanyCreditTerms__c/fields/fferpcore__DaysOffset4__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__DaysOffset4__c</fullName>
    <description>Number of days from base date when the document becomes due.</description>
    <inlineHelpText>Number of days from base date when the document becomes due.</inlineHelpText>
    <label>Days Offset 4</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>