unpackaged/main/default/objects/fferpcore__CompanyCreditTerms__c/fields/fferpcore__Description3__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__Description3__c</fullName>
    <description>The description of the settlement terms.</description>
    <inlineHelpText>The description of the settlement terms.</inlineHelpText>
    <label>Description 3</label>
    <length>80</length>
    <type>Text</type>
</CustomField>