unpackaged/main/default/objects/fferpcore__CompanyCreditTerms__c/fields/fferpcore__Description4__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__Description4__c</fullName>
    <description>The description of the settlement terms.</description>
    <inlineHelpText>The description of the settlement terms.</inlineHelpText>
    <label>Description 4</label>
    <length>80</length>
    <type>Text</type>
</CustomField>