unpackaged/main/default/objects/fferpcore__CompanyCreditTerms__c/fields/fferpcore__Discount3__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__Discount3__c</fullName>
    <description>The amount of discount to be applied.</description>
    <inlineHelpText>The amount of discount to be applied.</inlineHelpText>
    <label>Discount 3</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>